# fanplayer

./: .gitignore  Makefile.am  autogen.sh  build_fanplayer.sh  build_ffmpeg.sh  build_libavdev.sh  clean.sh  configure.ac  envsetup.sh  fanplayer.c  fanplayer.h  fanplayer.pc.in  ffrender.c  ffrender.h  pktqueue.c  pktqueue.h  readme.md  readme.txt  recorder.c  snapshot.c  snapshot.h  testplayer.c  todo.txt
avkcpdemuxer/: avkcpc.c  avkcpc.h  avkcpd.c  avkcpd.h  ikcp.c  ikcp.h  ringbuf.c
docs/: fanplayer + livedesk + ffrdp fine tune guide.txt
ffrdpdemuxer/: ffrdp.c  ffrdp.h  ffrdpc.c  ffrdpc.h  ffrdpd.c  ffrdpd.h  ringbuf.h
player-android/: .gitignore
player-android/apk/: build.bat  build.gradle
player-android/apk/app/: .gitignore  build.gradle  proguard-rules.pro
player-android/apk/gradle/wrapper/: gradle-wrapper.properties
player-android/ffmpeg/: build_ffmpeg_for_android.sh  build_ffmpeg_for_android_arm.sh  build_ffmpeg_for_android_x86.sh  howto
player-android/ffmpeg-android/: build_ffmpeg_for_android.sh
player-android/ffmpeg-android/include/: x264.h  x264_config.h
player-android/ffmpeg/include/: rtmp.h  x264_config.h
player-android/jni/: .gitignore  Android.mk  Application.mk  build.bat  build.sh  build_fanplayer_jni.sh  fanplayer_jni.cpp  fanplayer_jni.h  howto
player-android/openssl/: build_openssl_for_android.sh
player-android/soundtouch/include/: soundtouch.h
player-win32/: fanplayer.sln
player-win32/avkcpdemuxer/: avkcpdemuxer.vcproj
player-win32/csharpplayer/: PlayerProgram.cs
player-win32/csharpplayer/Properties/: AssemblyInfo.cs
player-win32/dx9sdk/include/: d3d9types.h
player-win32/dx9sdk/lib/: d3d9.lib  d3dx8d.lib  d3dx8dt.lib  d3dx9d.lib  d3dxd.lib
player-win32/fanplayer/: fanplayer.def  fanplayer.vcproj
player-win32/ffmpeg/: build_ffmpeg_for_win32.sh  howto
player-win32/ffmpeg-win32/: build_ffmpeg_for_win32.sh  howto
player-win32/ffmpeg-win32/include/: stdint.h
player-win32/ffmpeg/include/: dxva2api.h  stdint.h
player-win32/ffrdpdemuxer/: ffrdpdemuxer.def  ffrdpdemuxer.vcproj
player-win32/ffspliter/: ffspliter.cpp  ffspliter.h  ffspliter.vcproj
player-win32/openssl/lib/: libcrypto.lib  libssl.lib
player-win32/pthreads/: .gitignore
player-win32/pthreads-win32/include/: pthread_compat.h
player-win32/pthreads/include/: pthread.h  pthread_signal.h  pthread_time.h  pthread_unistd.h  sched.h  semaphore.h
player-win32/pthreads/lib/: pthread.lib
player-win32/solfs/: solfs.h  solfs.lib
player-win32/soundtouch-win32/include/: soundtouch.h
player-win32/testplayer/: player.rc  playerDlg.cpp  playerDlg.h  resource.h  solfstest.ini  stdafx.cpp  stdafx.h  testplayer.vcproj
player-win32/testplayer/res/: player.rc2
player-windows/: fanplayer-vs2005.sln  fanplayer-vs2019.sln  fanplayer.sln
player-windows/avkcpdemuxer/: avkcpdemuxer.def  avkcpdemuxer.vcproj  avkcpdemuxer.vcxproj
player-windows/csharpplayer/: PlayerForm.Designer.cs  PlayerForm.cs  csharpplayer.csproj
player-windows/csharpplayer/Properties/: Resources.Designer.cs  Settings.Designer.cs
player-windows/fanplayer/: fanplayer.def  fanplayer.vcproj  fanplayer.vcxproj
player-windows/ffmpeg-win32/: .gitignore  build_ffmpeg_for_win32.sh
player-windows/ffmpeg-win32/include/: pthread.h
player-windows/ffmpeg-win64/: build_ffmpeg_for_win64.sh  howto
player-windows/ffobjdet/: ffobjdet.c  ffobjdet.h  ffobjdet.vcproj  ffobjdet.vcxproj
player-windows/ffobjdet/include/: yolodet.h
player-windows/ffobjdet/lib32/: yolodet.lib
player-windows/ffobjdet/lib64/: yolodet.lib
player-windows/ffrdpdemuxer/: ffrdpdemuxer.vcproj  ffrdpdemuxer.vcxproj
player-windows/ffspliter/: ffspliter.c  ffspliter.vcproj  ffspliter.vcxproj
player-windows/soundtouch/lib64/: soundtouch_x64.lib
player-windows/testplayer/: player.cpp  player.h  player.rc  playerDlg.cpp  playerDlg.h  resource.h  testplayer.vcproj  testplayer.vcxproj
src/: adev-android.cpp  adev-cmn.c  adev-cmn.cpp  adev-win.c  adev-win.cpp  adev.h  datarate.c  datarate.h  dxva2hwa.c  dxva2hwa.cpp  dxva2hwa.h  fanplayer.cpp  fanplayer.h  ffplayer.c  ffplayer.cpp  ffplayer.h  ffrender.c  ffrender.cpp  ffrender.h  pktqueue.c  pktqueue.cpp  pktqueue.h  recorder.c  recorder.cpp  recorder.h  snapshot.c  snapshot.cpp  snapshot.h  stdefine.h  vdev-android.cpp  vdev-cmn.c  vdev-cmn.cpp  vdev-d3d.c  vdev-d3d.cpp  vdev-gdi.c  vdev-gdi.cpp  vdev.h  veffect.c  veffect.cpp  veffect.h
(+83 files in other folders)
